<resources>
    <string name="app_name">Возвращайка</string>
    <string name="not_defined">не определено</string>
    <string name="closed">Закрыть</string>
    <string name="password_saved">Пароль сохранён.</string>
    <string name="enter_your_new_password">Введите новый пароль!</string>
    <string name="the_password_is_incorrect">Пароль неверный!</string>
    <string name="enter_correct_password">Введите правильный пароль.</string>
    <string name="login_completed">Вход осуществлён.</string>
    <string name="not_end_point">Необходимо задать конечную точку.\nСтрелка указывает на север.</string>
    <string name="not_gps">Проверьте настройки GPS.\nСтрелка указывает на север.</string>
    <string name="not_gps_set_point">Проверьте\nнастройки GPS.</string>
    <string name="not_location">Нет сигнала\nо местоположении!</string>
    <string name="azimuth_point">"Азимут на точку: "</string>
    <string name="stripe_to_way">°\nСтрелка указывает путь.</string>
    <string name="meter">" м"</string>
    <string name="сongratulations">Поздравляю!</string>
    <string name="coordinates_recorded">Координаты записаны.</string>
    <string name="attention">Внимание!</string>
    <string name="coordinates_not_determined">Координаты не определены.</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="log_in">Войти</string>
    <string name="password">пароль</string>
    <string name="new_password">Придумайте пароль:\n(до 4-х цифр)</string>
    <string name="saved">Сохранить</string>
    <string name="wait">Подождите</string>
    <string name="loading">Идёт загрузка...</string>
    <string name="your_coordinates">Координаты Вашего\nместоположения</string>
    <string name="latitude">Широта:</string>
    <string name="longitude">Долгота:</string>
    <string name="accuracy">Точность измерения:</string>
    <string name="loading_wait">загрузка...</string>
    <string name="confirm">Записать</string>
    <string name="vk_maps_key">RS4b034496c28bc57fa25161a23095466ca33e7c5645038af522af2d206b7269</string>
    <string name="record_coordinates">Записать координаты</string>
    <string name="not_point">Точка не задана!</string>
    <string name="set_point_map">Укажите точку на карте.</string>
    <string name="set_enter_coord">Выберите способ\nввода координат:</string>
    <string name="on_map">на карте</string>
    <string name="real_coord">текущие</string>
    <string name="connect_internet">(требуется подключение\nк интернету)</string>
</resources>